--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,8 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.activity.scan.ScannerResultActivity">
+        </activity>
         <activity android:name=".ui.activity.login.ActivateAccActivity">
         </activity>
         <activity android:name=".ui.activity.login.ActivateStepActivity">
@@ -122,6 +124,9 @@
             android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.activity.remote.RemoteLogActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ui.activity.login.AutoGoActivateActivity"
             android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.activity.login.DeviceBindActivity"
