--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,10 +17,12 @@ android {
         applicationId "com.carlt.doride"
         minSdkVersion 15
         targetSdkVersion 26
-        versionCode 153
-        versionName "1.5.3"
+        versionCode 154
+        versionName "1.5.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        ndk {
+            abiFilters('armeabi-v7a')
+        }
     }
     buildTypes {
         release {
