1，加入正在激活中以及激活成功页面跳转逻辑

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,10 @@ android {
         abortOnError false
     }
     buildToolsVersion '27.0.3'
-
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 repositories {
     flatDir {
