--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -131,7 +131,8 @@
         <activity
             android:name=".ui.activity.login.DeviceBindActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden|adjustPan"/>
+            android:windowSoftInputMode="stateHidden|adjustPan"
+            />
         <activity
             android:name=".ui.activity.login.ResetPasswdActivity"
             android:screenOrientation="portrait"/>
