1，修改登录接口传的版本号为当前app版本

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,7 +76,8 @@
 
         <activity
             android:name=".SplashActivity"
-            android:theme="@style/splash">
+            android:theme="@style/AppTheme.StartingWindowTheme"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
